# cc-colony

./: .gitignore  .project-structure.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  WEBVIEW-QUICKSTART.md  colony.example.yml  deny.toml
.claude/skills/: agent-applications.md  colony-config.md  colony-message.md  knowledge-base.md  prompt-upgrade.md  startup-prompts.md  webview-dashboard.md
.claude/skills/colony-agent-skills/: bash-scripting.md  curl-api.md  gh-cli.md  git-workflow.md  jq-json.md  nvim-pane-editing.md  ollama-local-llm.md  tmux-pane-tools.md
.claude/skills/mcp-executor/: COLONY-EXECUTOR.md
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml
docs/: .gitignore  ADVANCED_CONFIG.md  BEADS-INTEGRATION.md  FINAL-RECOMMENDATION.md  GIT-STATE-IMPLEMENTATION.md  MANUAL_TESTING_GUIDE.md  README.md  ROADMAP.md  SUMMARY-manifest-ui.md  TESTING_PLAN.md  book.toml  lightweight-ui-options.md  manifest-ui-validation.md  ui-comparison-summary.md  webview-dashboard-guide.md
docs/src/: SUMMARY.md  introduction.md
docs/src/advanced/: architecture.md  best-practices.md  custom-templates.md  git-state.md  plugin-development.md
docs/src/cli/: agent.md  init.md  logs.md  metrics.md  overview.md  plugin.md  start.md  state.md  status.md  template.md  tui.md  workflow.md
docs/src/concepts/: agents.md  colonies.md  plugins.md  state.md  templates.md  workflows.md
docs/src/development/: building.md  contributing.md  testing.md
docs/src/examples/: code-review.md  data-pipeline.md  docs-team.md  parallel-dev.md  security-audit.md  testing-pipeline.md
docs/src/getting-started/: authentication.md  configuration.md  installation.md  quick-start.md
docs/src/troubleshooting/: common-issues.md  faq.md
examples/: README.md  colony-api-key.yml  colony-bedrock.yml  colony-env-vars.yml  colony-oauth.yml
examples/enhanced_tui/: Cargo.toml  README.md  egui_widget.rs  plotters_demo.rs  task_graph_ascii.rs
examples/web_ui_poc/: README.md  manifest.yml  sync_colony_data.sh
examples/web_ui_poc/static/: task-graph.html
examples/webview_poc/: Cargo.toml  README.md  colony_dashboard.rs  dashboard.html  simple_webview.rs
forge-src/: Cargo.toml  README.md
forge-src/scripts/: swarm_dashboard.sh
forge-src/src/: api.rs  config.rs  error.rs  main.rs
forge-src/src/bundle/: add.rs  bundle.rs  doctor.rs  export.rs  import.rs  init.rs  list.rs  login.rs  mod.rs  remove.rs  search.rs  sync.rs
forge-src/src/swarm/: agent.rs  attach.rs  broadcast.rs  config.rs  controller.rs  destroy.rs  init.rs  logs.rs  messages_cmd.rs  messaging.rs  mod.rs  start.rs  status.rs  stop.rs  tasks_cmd.rs  tmux.rs  worktree.rs
forge-src/src/swarm/tasks/: mod.rs  queue.rs
forge-src/src/swarm/tui/: app.rs  data.rs  events.rs  mod.rs  ui.rs
scripts/: colony_dashboard.sh
src/: error.rs  main.rs  utils.rs
src/colony/: agent.rs  agent_skills.rs  attach.rs  auth_cmd.rs  broadcast.rs  config.rs  controller.rs  destroy.rs  executor.rs  health.rs  init.rs  layout.rs  logging.rs  logs.rs  mcp_registry.rs  messages_cmd.rs  messaging.rs  metrics_cmd.rs  mod.rs  plugin_cmd.rs  relay_cmd.rs  skills.rs  start.rs  state_cmd.rs  state_integration.rs  status.rs  stop.rs  tasks_cmd.rs  template_cmd.rs  tmux.rs  workflow_cmd.rs  worktree.rs
src/colony/auth/: mod.rs  oauth.rs  providers.rs  token_store.rs
src/colony/metrics/: collector.rs  mod.rs  types.rs
src/colony/plugin/: manager.rs  mod.rs  types.rs
src/colony/relay/: client.rs  message.rs  mod.rs  state.rs
src/colony/state/: backend.rs  cache.rs  jsonl.rs  mod.rs  state_config.rs  types.rs
src/colony/tasks/: board.rs  mod.rs  queue.rs
src/colony/telemetry/: client.rs  events.rs  mod.rs
src/colony/template/: builtin.rs  manager.rs  mod.rs  types.rs
src/colony/tui/: app.rs  data.rs  events.rs  ui.rs
src/colony/ui/: dashboard.html  mod.rs  webview.rs
src/colony/workflow/: definition.rs  mod.rs  storage.rs  types.rs
