[package]
name = "colony"
version = "0.1.0"
edition = "2021"
authors = ["Colony Team"]
description = "Multi-agent orchestration for Claude Code on tmux"
license = "MIT"

[[bin]]
name = "colony"
path = "src/main.rs"

[dependencies]
# CLI parsing
clap = { version = "4.5", features = ["derive", "cargo"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Colored terminal output
colored = "2.1"

# Progress indicators
indicatif = "0.17"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Config file handling
dirs = "5.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Terminal interaction
dialoguer = "0.11"

# TUI
ratatui = "0.26"
crossterm = "0.27"

[dev-dependencies]
tempfile = "3.8"
