[package]
name = "cc-colony"
version = "1.1.0"
edition = "2021"
authors = ["Colony Team"]
description = "Multi-agent orchestration for Claude Code with tmux and integrated MCP executor"
license = "MIT"
repository = "https://github.com/mcfearsome/cc-colony"
homepage = "https://github.com/mcfearsome/cc-colony"
readme = "README.md"
keywords = ["claude", "tmux", "orchestration", "multi-agent", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "colony"
path = "src/main.rs"

[dependencies]
# CLI parsing
clap = { version = "4.5", features = ["derive", "cargo"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Colored terminal output
colored = "2.1"

# Progress indicators
indicatif = "0.17"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Config file handling
dirs = "5.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Terminal interaction
dialoguer = "0.11"

# TUI
ratatui = "0.26"
crossterm = "0.27"

# State management
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile = "3.8"
