[package]
name = "webview_poc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simple_webview"
path = "simple_webview.rs"

[[bin]]
name = "colony_dashboard_webview"
path = "colony_dashboard.rs"

[dependencies]
wry = "0.43"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "=2.0.1", features = ["v2_38"] }
